--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>hystrix_dashboard</module>
         <module>zuul</module>
         <module>zuul_regular</module>
+        <module>zuul_regular_fallback</module>
+        <module>zuulFilter</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
